ANTLR/govdslParser.py
# Generated from govdsl.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class govdslParser ( Parser ):

    grammarFileName = "govdsl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Project'", "'{'", "'}'", "'Roles'", 
                     "':'", "','", "'Deadlines'", "'Rules'", "'deadline'", 
                     "'default'", "'applied to'", "'Issue'", "'Pull request'", 
                     "'people'", "'minVotes'", "'days'", "'weeks'", "'months'", 
                     "'years'", "'Majority'", "'LeaderDriven'", "'Ratio'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "ATTR_ID", 
                      "INT", "WS" ]

    RULE_project = 0
    RULE_attributes = 1
    RULE_roles = 2
    RULE_roleID = 3
    RULE_deadlines = 4
    RULE_deadline = 5
    RULE_deadlineID = 6
    RULE_rules = 7
    RULE_rule = 8
    RULE_ruleID = 9
    RULE_ruleContent = 10
    RULE_appliedTo = 11
    RULE_taskID = 12
    RULE_people = 13
    RULE_minVotes = 14
    RULE_timeUnit = 15
    RULE_ruleType = 16

    ruleNames =  [ "project", "attributes", "roles", "roleID", "deadlines", 
                   "deadline", "deadlineID", "rules", "rule", "ruleID", 
                   "ruleContent", "appliedTo", "taskID", "people", "minVotes", 
                   "timeUnit", "ruleType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    ID=23
    ATTR_ID=24
    INT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(govdslParser.ID, 0)

        def EOF(self):
            return self.getToken(govdslParser.EOF, 0)

        def attributes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(govdslParser.AttributesContext)
            else:
                return self.getTypedRuleContext(govdslParser.AttributesContext,i)


        def getRuleIndex(self):
            return govdslParser.RULE_project

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProject" ):
                listener.enterProject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProject" ):
                listener.exitProject(self)




    def project(self):

        localctx = govdslParser.ProjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_project)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(govdslParser.T__0)
            self.state = 35
            self.match(govdslParser.ID)
            self.state = 36
            self.match(govdslParser.T__1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 400) != 0):
                self.state = 37
                self.attributes()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(govdslParser.T__2)
            self.state = 44
            self.match(govdslParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def roles(self):
            return self.getTypedRuleContext(govdslParser.RolesContext,0)


        def deadlines(self):
            return self.getTypedRuleContext(govdslParser.DeadlinesContext,0)


        def rules(self):
            return self.getTypedRuleContext(govdslParser.RulesContext,0)


        def getRuleIndex(self):
            return govdslParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = govdslParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_attributes)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.roles()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.deadlines()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.rules()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RolesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def roleID(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(govdslParser.RoleIDContext)
            else:
                return self.getTypedRuleContext(govdslParser.RoleIDContext,i)


        def getRuleIndex(self):
            return govdslParser.RULE_roles

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoles" ):
                listener.enterRoles(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoles" ):
                listener.exitRoles(self)




    def roles(self):

        localctx = govdslParser.RolesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_roles)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(govdslParser.T__3)
            self.state = 52
            self.match(govdslParser.T__4)
            self.state = 53
            self.roleID()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 54
                self.match(govdslParser.T__5)
                self.state = 55
                self.roleID()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoleIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(govdslParser.ID, 0)

        def getRuleIndex(self):
            return govdslParser.RULE_roleID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoleID" ):
                listener.enterRoleID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoleID" ):
                listener.exitRoleID(self)




    def roleID(self):

        localctx = govdslParser.RoleIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_roleID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(govdslParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeadlinesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deadline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(govdslParser.DeadlineContext)
            else:
                return self.getTypedRuleContext(govdslParser.DeadlineContext,i)


        def getRuleIndex(self):
            return govdslParser.RULE_deadlines

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeadlines" ):
                listener.enterDeadlines(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeadlines" ):
                listener.exitDeadlines(self)




    def deadlines(self):

        localctx = govdslParser.DeadlinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_deadlines)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(govdslParser.T__6)
            self.state = 64
            self.match(govdslParser.T__4)
            self.state = 66 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 65
                self.deadline()
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==23):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeadlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deadlineID(self):
            return self.getTypedRuleContext(govdslParser.DeadlineIDContext,0)


        def INT(self):
            return self.getToken(govdslParser.INT, 0)

        def timeUnit(self):
            return self.getTypedRuleContext(govdslParser.TimeUnitContext,0)


        def getRuleIndex(self):
            return govdslParser.RULE_deadline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeadline" ):
                listener.enterDeadline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeadline" ):
                listener.exitDeadline(self)




    def deadline(self):

        localctx = govdslParser.DeadlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_deadline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.deadlineID()
            self.state = 71
            self.match(govdslParser.T__4)
            self.state = 72
            self.match(govdslParser.INT)
            self.state = 73
            self.timeUnit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeadlineIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(govdslParser.ID, 0)

        def getRuleIndex(self):
            return govdslParser.RULE_deadlineID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeadlineID" ):
                listener.enterDeadlineID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeadlineID" ):
                listener.exitDeadlineID(self)




    def deadlineID(self):

        localctx = govdslParser.DeadlineIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_deadlineID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(govdslParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RulesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(govdslParser.RuleContext)
            else:
                return self.getTypedRuleContext(govdslParser.RuleContext,i)


        def getRuleIndex(self):
            return govdslParser.RULE_rules

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRules" ):
                listener.enterRules(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRules" ):
                listener.exitRules(self)




    def rules(self):

        localctx = govdslParser.RulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rules)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(govdslParser.T__7)
            self.state = 78
            self.match(govdslParser.T__4)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.rule_()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==23):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleID(self):
            return self.getTypedRuleContext(govdslParser.RuleIDContext,0)


        def ruleType(self):
            return self.getTypedRuleContext(govdslParser.RuleTypeContext,0)


        def ruleContent(self):
            return self.getTypedRuleContext(govdslParser.RuleContentContext,0)


        def getRuleIndex(self):
            return govdslParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)




    def rule_(self):

        localctx = govdslParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.ruleID()
            self.state = 85
            self.match(govdslParser.T__4)
            self.state = 86
            self.ruleType()
            self.state = 87
            self.match(govdslParser.T__1)
            self.state = 88
            self.ruleContent()
            self.state = 89
            self.match(govdslParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(govdslParser.ID, 0)

        def getRuleIndex(self):
            return govdslParser.RULE_ruleID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleID" ):
                listener.enterRuleID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleID" ):
                listener.exitRuleID(self)




    def ruleID(self):

        localctx = govdslParser.RuleIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ruleID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(govdslParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def appliedTo(self):
            return self.getTypedRuleContext(govdslParser.AppliedToContext,0)


        def people(self):
            return self.getTypedRuleContext(govdslParser.PeopleContext,0)


        def deadlineID(self):
            return self.getTypedRuleContext(govdslParser.DeadlineIDContext,0)


        def minVotes(self):
            return self.getTypedRuleContext(govdslParser.MinVotesContext,0)


        def ruleID(self):
            return self.getTypedRuleContext(govdslParser.RuleIDContext,0)


        def getRuleIndex(self):
            return govdslParser.RULE_ruleContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleContent" ):
                listener.enterRuleContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleContent" ):
                listener.exitRuleContent(self)




    def ruleContent(self):

        localctx = govdslParser.RuleContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ruleContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.appliedTo()
            self.state = 94
            self.people()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 95
                self.minVotes()


            self.state = 98
            self.match(govdslParser.T__8)
            self.state = 99
            self.deadlineID()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 100
                self.match(govdslParser.T__9)
                self.state = 101
                self.ruleID()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AppliedToContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def taskID(self):
            return self.getTypedRuleContext(govdslParser.TaskIDContext,0)


        def getRuleIndex(self):
            return govdslParser.RULE_appliedTo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAppliedTo" ):
                listener.enterAppliedTo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAppliedTo" ):
                listener.exitAppliedTo(self)




    def appliedTo(self):

        localctx = govdslParser.AppliedToContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_appliedTo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(govdslParser.T__10)
            self.state = 105
            self.taskID()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TaskIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return govdslParser.RULE_taskID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTaskID" ):
                listener.enterTaskID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTaskID" ):
                listener.exitTaskID(self)




    def taskID(self):

        localctx = govdslParser.TaskIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_taskID)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PeopleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def roleID(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(govdslParser.RoleIDContext)
            else:
                return self.getTypedRuleContext(govdslParser.RoleIDContext,i)


        def getRuleIndex(self):
            return govdslParser.RULE_people

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeople" ):
                listener.enterPeople(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeople" ):
                listener.exitPeople(self)




    def people(self):

        localctx = govdslParser.PeopleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_people)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(govdslParser.T__13)
            self.state = 110
            self.roleID()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 111
                self.match(govdslParser.T__5)
                self.state = 112
                self.roleID()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MinVotesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(govdslParser.INT, 0)

        def getRuleIndex(self):
            return govdslParser.RULE_minVotes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinVotes" ):
                listener.enterMinVotes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinVotes" ):
                listener.exitMinVotes(self)




    def minVotes(self):

        localctx = govdslParser.MinVotesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_minVotes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(govdslParser.T__14)
            self.state = 119
            self.match(govdslParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return govdslParser.RULE_timeUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimeUnit" ):
                listener.enterTimeUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimeUnit" ):
                listener.exitTimeUnit(self)




    def timeUnit(self):

        localctx = govdslParser.TimeUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_timeUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 983040) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return govdslParser.RULE_ruleType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleType" ):
                listener.enterRuleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleType" ):
                listener.exitRuleType(self)




    def ruleType(self):

        localctx = govdslParser.RuleTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_ruleType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





